button alignment not showing up correctly?

--- a/style.css
+++ b/style.css
@@ -67,7 +67,8 @@ margin: 0;
 }
 
 .button-container{
-
+width: 50%;
+margin:auto;
 padding: 10px;
 background-color: white;
 border: none;
@@ -76,8 +77,7 @@ contain: content;
 align-content: center;
 outline: none;
 text-decoration: none;
-width: 50%;
-margin:auto;
+
     
 
 }
@@ -99,7 +99,6 @@ a {
     container: fit-content;
     text-emphasis-color:none;
     outline: none;
-    align-content: center;
 
 }
 
@@ -113,8 +112,7 @@ a {
     outline: none;
     box-shadow: 0 0 4px rgb(112, 112, 112);
     text-decoration: none;
-    align-content: center;
-    
+    margin: inherit;
 }
 
 .button-container button:focus{
